# AIFFEL_quest_eng_jongha

./: .env  .gitignore  main.py  pyproject.toml
Computer_Vision/CV01/: CV01.ipynb  README.md  main.ipynb  resnet.md  torch.ipynb
Computer_Vision/CV02/: human_segmentation.ipynb
Main_Quest/Quest01/: Quest01.ipynb
NLP/NLP01/: NLP01_baseCode.ipynb  NLP01_prj.ipynb
NLP/NLP02/: README.md  prj_12_ex.ipynb
